opa-manager-operator/testing-yamls/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    securityContext:
      privileged: true
    image: docker.io/ubuntu
    imagePullPolicy: IfNotPresent
    command:
    - "/bin/sh"
    args:
    - "-c"
    - "sleep 100000"
