opa-manager-operator/testing-yamls/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAllRootPod
metadata:
  name: deny-all-root-pod
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
