opa-manager-operator/testing-yamls/deny-pods-on-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAllRootPod
metadata:
  name: deny-all-root-pod
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - "kube-system"
      - "ingress-nginx-kubernetes-worker"
      - "kubernetes-dashboard"
      - "kube-public"
      - "kube-node-lease"
