opa-manager-operator/testing-yamls/rego.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyallrootpod
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAllRootPod
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            error:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyallrootpod
 
        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsUser == 0
          msg := sprintf("User cannot run as root. runAsUser:: %v", [input.review.object.spec.containers[_].securityContext.runAsUser])
        }
