opa-manager-operator/testing-yamls/template-constraint.yaml
 
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyallrootpod
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAllRootPod
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyallrootpod
 
        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsUser == 0
          msg := sprintf("User cannot run as root. runAsUser:: %v", [input.review.object.spec.containers[_].securityContext.runAsUser])
        }
